--- a/div50%+float left.html
+++ b/div50%+float left.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html> 
 <html>
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <style>
  body {
      background-color: pink;
@@ -22,8 +25,8 @@
    div {
        background-color: red;
    }    
- }
-
+ }  
+      
         
 </style>
 </head>
